@@ -7,6 +7,8 @@ An overview of the relevant changes in new, and older, releases.
 Version 1.3.7 (????-??-??)
 --------------------------
 
+- Probably working Xcode 2.1 support (for converted Xcode 2.0 projects)
+
 - Hide List, Object, and Protocol classes from objc.loadBundle
   to prevent confusion with Python code.  They can still be looked
   up with objc.lookUpClass.
